--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,3 +1,4 @@
+<section class="main-bg-pages"></section>
 <section id="content-contact">
     <div class="">
         <div class="form-section">
@@ -12,57 +13,21 @@
                     <div class="social-media">
                         <div class="col-md-6">
                             <div class="social">
-                                <h2>Agencia matriz</h2>
+                                <h3><a href="tel:3318959338"><i class="fa fa-mobile"></i> (33)18 95 93 38 </a></h3>
 
-                                <h3><a href="tel:013535317300"><i class="fa fa-phone"></i> (353)531 73 00</a></h3>
+                                <h3><a href="tel:3531117379"><i class="fa fa-phone"></i> 01(353) 128 37 81</a></h3>
 
-                                <h3><a href="tel:3531117379"><i class="fa fa-phone"></i> (353)531 82 00</a></h3>
-
-                                <h3><a href="tel:3531117379"><i class="fa fa-whatsapp"></i> 353 111 73 79</a></h3>
-
-                                <h3>
-                                    <a target="_blank"
-                                       href="https://www.google.com.mx/maps/place/Francisco+I.+Madero+318,+Santuario,+Centro+Dos,+59053+Sahuayo+de+Morelos,+Mich./@20.0634481,-102.7242179,17.35z/data=!4m5!3m4!1s0x842ee353cb621753:0x96fd76a500856667!8m2!3d20.0630961!4d-102.7220154">Dirección:
-                                        Madero 318, Sahuayo, Mich.</a></h3>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="social">
-                                <h2>Sucursal centro</h2>
-
-                                <h3><a href="tel:013535317300"><i class="fa fa-phone"></i> (353)532 67 21</a></h3>
+                                <h3><a href="mailto:nfo@mercadomovil.com.mx"><i class="fa fa-envelope"></i>
+                                    nfo@mercadomovil.com.mx</a></h3>
 
                                 <h3>
-                                    <a target="_blank"
-                                       href="https://www.google.com.mx/maps/place/Viajes+Coral+Centro/@20.0580736,-102.7251509,17z/data=!3m1!4b1!4m5!3m4!1s0x842efcad325c1be3:0x1e3d000ad6c67ed!8m2!3d20.0580736!4d-102.7229569">Dirección:
-                                        Tepeyac #75 local 1, Sahuayo, Mich.</a></h3>
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <div class="social">
-                                <div class="col-md-6">
-                                    <h3><a href="mailto:info@viajescoral.com"><i class="fa fa-envelope"></i>
-                                        info@viajescoral.com</a>
-                                    </h3>
-                                </div>
-
-                                <div class="col-md-6">
-                                    <h3><a href="mailto:viajes_coral@hotmail.com"><i class="fa fa-envelope"></i>
-                                        viajes_coral@hotmail.com</a>
-                                    </h3>
-                                </div>
-
-                                <div class="col-md-6">
-                                    <h3><a href="mailto:isa_viajes03@outlook.com"><i class="fa fa-envelope"></i>
-                                        isa_viajes03@outlook.com</a>
-                                    </h3>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3><a href="mailto:isa_viajes03@outlook.com"><i class="fa fa-envelope"></i>
-                                        isaviajescoral@hotmail.com</a>
-                                    </h3>
-                                </div>
-
+                                    <a target="_blank" href="https://www.facebook.com/MercadoMovilMX?fref=ts"><i
+                                            class="fa fa-facebook-square fa-2x"></i></a>
+                                    <a target="_blank" href="https://twitter.com/mercadomovil_mx?lang=es"><i
+                                            class="fa fa-twitter-square fa-2x"></i></a>
+                                    <a target="_blank" href="https://plus.google.com/u/0/108180722784779473100/posts"><i
+                                            class="fa fa-google-plus-square fa-2x"></i></a>
+                                </h3>
                             </div>
                         </div>
                     </div>
