ajuste de estilo

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -127,13 +127,13 @@
         <p>Contáctanos, estamos para servirte. </p>
         <div class="col-md-12 list-contact">
             <div class="col-sm-4">
-                <a href="tel:3318959338"><i class="fa fa-phone"></i> (33) 18 95 93 38</a>
+                <a href="tel:3318959338"><i class="fa fa-mobile"></i> (33) 18 95 93 38</a>
             </div>
             <div class="col-sm-4">
                 <a href="tel:3535334925"><i class="fa fa-phone"></i> 01(353) 533 49 25</a>
             </div>
             <div class="col-sm-4">
-                <a href="tel:info@mercadomovil.com.mx"><i class="fa fa-whatsapp"></i> info@mercadomovil.com.mx</a>
+                <a href="tel:info@mercadomovil.com.mx"><i class="fa fa-envelope"></i> info@mercadomovil.com.mx</a>
             </div>
         </div>
     </div>
