--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1189,6 +1189,9 @@ color
   border-radius: 5px;
   margin-top: 100px;
 }
+.form-item {
+  padding-top: 20px;
+}
 .form-control {
   display: block;
   width: 100%;
@@ -1199,8 +1202,10 @@ color
   color: #555;
   background-color: #fff;
   background-image: none;
-  border: 1px solid #eaeaea;
-  border-radius: 4px;
+  border: none;
+  padding: 0;
+  border-bottom: 1px solid #eaeaea !important;
+  border-radius: 0px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0);
   box-shadow: inset 0 1px 1px rgba(0,0,0,0);
   -webkit-transition: border-color ease-in-out 0.15s;
@@ -1209,12 +1214,52 @@ color
   box-shadow: ease-in-out 0.15s;
   transition: border-color ease-in-out 0.15s;
   box-shadow: ease-in-out 0.15s;
+  transition: all ease 0.1s;
 }
 .form-control:focus {
-  border-color: #79afa0;
+  padding: 8px 5px;
+  border: none;
+  border-bottom: 1px solid #888 !important;
   outline: 0;
   -webkit-box-shadow: 0 0 0 9px rgba(0,0,0,0);
   box-shadow: 0 0 0 9px rgba(0,0,0,0);
+}
+.form-control-select {
+  display: block;
+  width: 100%;
+  height: 44px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  padding: 0;
+  border: 1px solid #eaeaea;
+  border-radius: 0px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0);
+  -webkit-transition: border-color ease-in-out 0.15s;
+  -webkit-box-shadow: ease-in-out 0.15s;
+  -o-transition: border-color ease-in-out 0.15s;
+  box-shadow: ease-in-out 0.15s;
+  transition: border-color ease-in-out 0.15s;
+  box-shadow: ease-in-out 0.15s;
+  transition: all ease 0.1s;
+}
+.form-control-select:focus {
+  padding: 8px 5px;
+  border: 1px solid #888;
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 9px rgba(0,0,0,0);
+  box-shadow: 0 0 0 9px rgba(0,0,0,0);
+}
+.checkbox-styl {
+  padding: 25px 0 0;
+  text-align: center;
+}
+.checkbox-styl a {
+  color: #1b449c;
 }
 .owl-nav {
   display: none;
