ajustes en area de doc y ajustes responsivos

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -363,6 +363,8 @@ header
     line-height 40px
     margin-bottom 0
     font-size 26px
+  h4
+    color #555
     .divider
       border-color #ccc
       margin-top 15px
@@ -638,7 +640,20 @@ header
     h2
       font-size 18px
       color #555
-
+.box-doc
+  margin 5px 60px !important
+  padding 0
+  .box-container
+    text-align center !important
+    padding 20px 0px
+    h3
+      padding-bottom 20px
+      margin 0
+  &:hover
+    boder none
+    box-shadow 0 0 0 transparent !important
+    h3
+      color #cb6c18
 .box-default
   margin 10px
   padding 10px
