--- a/app/css/main.css
+++ b/app/css/main.css
@@ -403,7 +403,10 @@ colorred
   margin-bottom: 0;
   font-size: 26px;
 }
-#content-area .title-single .divider {
+#content-area h4 {
+  color: #555;
+}
+#content-area h4 .divider {
   border-color: #ccc;
   margin-top: 15px;
 }
@@ -728,6 +731,25 @@ color
 .box-widget .box-widget-container h2 {
   font-size: 18px;
   color: #555;
+}
+.box-doc {
+  margin: 5px 60px !important;
+  padding: 0;
+}
+.box-doc .box-container {
+  text-align: center !important;
+  padding: 20px 0px;
+}
+.box-doc .box-container h3 {
+  padding-bottom: 20px;
+  margin: 0;
+}
+.box-doc:hover {
+  boder: none;
+  box-shadow: 0 0 0 transparent !important;
+}
+.box-doc:hover h3 {
+  color: #cb6c18;
 }
 .box-default {
   margin: 10px;
@@ -1558,6 +1580,25 @@ color
   }
 }
 @media only screen and (max-width: 767px) {
+  .navbar-header {
+    background: #cb6c18;
+    padding-bottom: 15px;
+  }
+  header .navbar-default .nav-log {
+    margin-top: 30px;
+    border-left: 1px solid transparent;
+    text-indent: 5px;
+  }
+  .nav-main {
+    border: none !important;
+  }
+  .nav-log {
+    border: none !important;
+  }
+  .nav-log .btn-white-clear {
+    border: none;
+    font-size: 18px;
+  }
   .main-bg-pages {
     display: none;
   }
@@ -1669,9 +1710,10 @@ color
   .navbar-default .navbar-collapse,
   .navbar-default .navbar-form {
     border: none;
+    background: rgba(0,0,0,0.89);
   }
   .navbar-nav {
-    background: #fff;
+    background: transparent;
     margin-top: 44px;
     box-shadow: 0 4px 5px rgba(0,0,0,0.3);
     border-top: 1px solid #f5f5f5;
@@ -1683,8 +1725,8 @@ color
     display: none;
   }
   header .logo {
-    margin-top: 5px;
-    width: auto;
+    margin-top: 20px;
+    width: 250px;
   }
   h2.title-outstanding {
     font-size: 16px !important;
@@ -1697,7 +1739,7 @@ color
     border-left: 1px solid transparent;
   }
   header .navbar-default .navbar-nav > li > a {
-    color: #555;
+    color: #fff;
     padding: 15px 15px;
   }
   .social-media .social a {
@@ -1711,6 +1753,12 @@ color
   }
   #slider-area {
     padding-bottom: 300px;
+  }
+  .carousel-caption {
+    top: 20%;
+  }
+  .carousel-caption .btn {
+    margin-bottom: 20px;
   }
   .portfolio_content {
     position: relative;
@@ -1758,7 +1806,7 @@ color
     padding-right: 0;
   }
   .navbar-toggle .icon-bar {
-    background-color: #fff;
+    background-color: #fff !important;
   }
   .header_area_text {
     padding-top: 50px;
