--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -166,6 +166,20 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .navbar-header
+    background #cb6c18
+    padding-bottom 15px
+  header .navbar-default .nav-log
+    margin-top 30px
+    border-left 1px solid transparent;
+    text-indent 5px
+  .nav-main
+    border none !important
+  .nav-log
+    border none !important
+    .btn-white-clear
+      border none
+      font-size 18px
   .main-bg-pages
     display none
   .box-widget
@@ -243,8 +257,9 @@
     padding 0 15px !important
   .navbar-default .navbar-collapse, .navbar-default .navbar-form
     border none
+    background rgba(0,0,0,0.89)
   .navbar-nav
-    background #fff
+    background transparent
     margin-top 44px
     box-shadow 0 4px 5px rgba(0,0,0,0.3)
     border-top 1px solid #f5f5f5
@@ -253,8 +268,8 @@
   #wrap
     display none
   header .logo
-    margin-top 5px
-    width auto
+    margin-top 20px
+    width 250px
   h2.title-outstanding
     font-size 16px !important
     padding 20px 10px !important
@@ -264,7 +279,7 @@
     border-left 1px solid transparent
 
   header .navbar-default .navbar-nav > li > a
-    color #555
+    color white
     padding 15px 15px
   .social-media .social a
     word-wrap break-word
@@ -274,7 +289,10 @@
     margin 130px 0px 60px !important
   #slider-area
     padding-bottom 300px
-
+  .carousel-caption
+    top 20%
+    .btn
+      margin-bottom 20px
 
   .portfolio_content
     position relative
@@ -325,8 +343,7 @@
 
 
   .navbar-toggle .icon-bar
-    background-color #fff
-
+    background-color #fff !important
 
   .header_area_text
     padding-top 50px
