--- a/app/templates/docs.html
+++ b/app/templates/docs.html
@@ -2,30 +2,66 @@
 <section id="content-area" class="content-blog">
     <div class="container">
         <div class="row">
-            <div class="col-md-9 col-sm-9">
-                <div class="col-md-12 title">
-                    <h2 class="title-single">Blog</h2>
+            <div class="col-md-12">
+                <div class="title text-center">
+                    <h2 class="title-single">¿Necesitas ayuda?</h2>
+                    <h4>Aquí encontrarás las herramientas necesarias para solucionar todas tus dudas</h4>
                     <hr class="divider"/>
                 </div>
 
                 <div class="content-pages" infinite-scroll='Post.getMorePosts()'
                      infinite-scroll-disabled='Post.busy || !Post.next || Post.loadPosts'>
                     <div class="row">
-                        <div class="col-sm-4" ng-repeat="entry in Post.list">
-
+                        <!--<div class="col-sm-6" ng-repeat="entry in Post.list">-->
+                        <div class="col-sm-6">
                             <a post-link="{ link: {url: entry.link, target: '_blank'} }"
                                ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
-                                <div class="box-default">
-                                    <div class="box-header" style="background-image: url('{{ entry.urlImages.thumbnails ? entry.urlImages.thumbnails : 'http://www.viajescoral.com/img/img-default.jpg' }}')">
+                                <div class="box-default box-doc">
+                                    <div class="box-header" style="background-image: url('http://www.viajescoral.com/img/img-default.jpg')">
                                     </div>
 
                                     <div class="box-container">
-                                        <div class="height-title"><h3>{{ entry.title | characters:35 }}</h3></div>
-                                        <div class="height-summary"><p>{{ entry.excerpt | characters:50 }}</p></div>
+                                        <div class="height-title"><h3>Tutoriales</h3></div>
                                     </div>
-                                    <div class="box-footer">
-                                        <p><span><i class="fa fa-calendar-"></i></span>
-                                            {{ entry.createdAt | date : shortDate }} </p>
+                                </div>
+                            </a>
+
+                        </div>
+                        <div class="col-sm-6">
+                            <a post-link="{ link: {url: entry.link, target: '_blank'} }"
+                               ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
+                                <div class="box-default box-doc">
+                                    <div class="box-header" style="background-image: url('http://www.viajescoral.com/img/img-default.jpg')">
+                                    </div>
+
+                                    <div class="box-container">
+                                        <div class="height-title"><h3>Mobil commerce</h3></div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-6">
+                            <a post-link="{ link: {url: entry.link, target: '_blank'} }"
+                               ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
+                                <div class="box-default box-doc">
+                                    <div class="box-header" style="background-image: url('http://www.viajescoral.com/img/img-default.jpg')">
+                                    </div>
+
+                                    <div class="box-container">
+                                        <div class="height-title"><h3>Preguntas frecuentes</h3></div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-6">
+                            <a post-link="{ link: {url: entry.link, target: '_blank'} }"
+                               ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
+                                <div class="box-default box-doc">
+                                    <div class="box-header" style="background-image: url('http://www.viajescoral.com/img/img-default.jpg')">
+                                    </div>
+
+                                    <div class="box-container">
+                                        <div class="height-title"><h3>Más de mercado Móvil</h3></div>
                                     </div>
                                 </div>
                             </a>
@@ -39,12 +75,10 @@
                                 contenido disponible
                             </h2>
                         </div>
+
                     </div>
                     <!--post list -->
                 </div>
-            </div>
-            <div class="col-md-3 col-sm-3 widgets">
-                <ng-include src="'/templates/partials/sidebar.html'"></ng-include>
             </div>
         </div>
     </div>
