--- a/app/templates/docs.html
+++ b/app/templates/docs.html
@@ -9,71 +9,20 @@
                     <hr class="divider"/>
                 </div>
 
-                <div class="content-pages" infinite-scroll='Post.getMorePosts()'
-                     infinite-scroll-disabled='Post.busy || !Post.next || Post.loadPosts'>
+                <div class="content-pages">
                     <div class="row">
-                        <!--<div class="col-sm-6" ng-repeat="entry in Post.list">-->
-                        <div class="col-sm-6">
-                            <a post-link="{ link: {url: entry.link, target: '_blank'} }"
-                               ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
+                        <!--<div class="col-sm-6" >-->
+                        <div class="col-sm-6" ng-repeat="item in Post.categories">
+                            <a post-link="{ link: {url: item.link, target: '_blank'} }"
+                               ui-sref="category_doc({slug: item.slug})" title="{{ item.name }}">
                                 <div class="box-default box-doc">
-                                    <div class="box-header" style="background-image: url('http://www.viajescoral.com/img/img-default.jpg')">
-                                    </div>
-
+                                    <div class="box-header" style="background-image: url('{{ item.urlImages.original ? item.urlImages.original : 'http://localhost:8080/img/img-default.jpg' }}')"></div>
                                     <div class="box-container">
-                                        <div class="height-title"><h3>Tutoriales</h3></div>
+                                        <div class="height-title"><h3>{{ item.name }}</h3></div>
                                     </div>
                                 </div>
                             </a>
 
-                        </div>
-                        <div class="col-sm-6">
-                            <a post-link="{ link: {url: entry.link, target: '_blank'} }"
-                               ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
-                                <div class="box-default box-doc">
-                                    <div class="box-header" style="background-image: url('http://www.viajescoral.com/img/img-default.jpg')">
-                                    </div>
-
-                                    <div class="box-container">
-                                        <div class="height-title"><h3>Mobil commerce</h3></div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-sm-6">
-                            <a post-link="{ link: {url: entry.link, target: '_blank'} }"
-                               ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
-                                <div class="box-default box-doc">
-                                    <div class="box-header" style="background-image: url('http://www.viajescoral.com/img/img-default.jpg')">
-                                    </div>
-
-                                    <div class="box-container">
-                                        <div class="height-title"><h3>Preguntas frecuentes</h3></div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-sm-6">
-                            <a post-link="{ link: {url: entry.link, target: '_blank'} }"
-                               ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
-                                <div class="box-default box-doc">
-                                    <div class="box-header" style="background-image: url('http://www.viajescoral.com/img/img-default.jpg')">
-                                    </div>
-
-                                    <div class="box-container">
-                                        <div class="height-title"><h3>Más de mercado Móvil</h3></div>
-                                    </div>
-                                </div>
-                            </a>
-
-                        </div>
-                        <div class="col-sm-12" ng-show="Post.busy">
-                            <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
-                        </div>
-                        <div class="col-sm-12" ng-show="!Post.busy">
-                            <h2 class="text-center no-content" ng-show="!Post.list.length">Lo sentimos no contamos con
-                                contenido disponible
-                            </h2>
                         </div>
 
                     </div>
