Fixes before deploy

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="col-sm-4"><h4><i class="fa fa-credit-card"></i> Procesar cobros</h4></div>
             </div>
-            <a href="#" class="btn btn-white-clear">Más información</a>
+            <a ui-sref="docs" class="btn btn-white-clear">Más información</a>
             <a ui-sref="register" class="btn btn-orange">Abrir una cuenta</a>
 
             <div class="download-app">
