--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -3,7 +3,7 @@
         Contáctanos
     </div>
     <div class="box-widget-container">
-        <h2>Agencia matriz</h2>
+        <h2>Soporte telefónico</h2>
 
         <h3><a href="tel:3318959338"><i class="fa fa-mobile"></i>(33) 18 95 93 38 </a></h3>
 
