--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="content-post" ng-if="!Post.isBlog">
-                    <div class="pull-left margin10">
+                    <div class="pull-left">
                         <uib-carousel interval="5000" template-url="/templates/partials/carousel-single.html">
                             <uib-slide ng-repeat="slide in Post.detail.galleryImages">
                                 <div class="img-gallery-single"
