--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,7 +16,7 @@
                 <div class="col-sm-4"><h4><i class="fa fa-credit-card"></i> Procesar cobros</h4></div>
             </div>
             <a ui-sref="docs" class="btn btn-white-clear">Más información</a>
-            <a ui-sref="register" class="btn btn-orange">Abrir una cuenta</a>
+            <a href="https://mercadomovil.com.mx/hq/access/register" class="btn btn-orange">Abrir una cuenta</a>
 
             <div class="download-app">
                 <a target="_blank" href="https://appsto.re/mx/QrI68.i"><img src="img/download-app.png" alt="App Store"/></a>
@@ -54,7 +54,7 @@
             <br/>
 
             <div class="text-center">
-                <a ui-sref="register" class="btn btn-white-clear">Abrir cuenta en Mercado Móvil</a>
+                <a href="https://mercadomovil.com.mx/hq/access/register" class="btn btn-white-clear">Abrir cuenta en Mercado Móvil</a>
             </div>
         </div>
     </div>
