Add alert in home and change remote user in fabfile

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,12 +15,21 @@
                 </div>
                 <div class="col-sm-4"><h4><i class="fa fa-credit-card"></i> Procesar cobros</h4></div>
             </div>
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8">
+                        <div class="alert alert-warning alert-dismissible" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>Si procesas tus cobros con iOS, utiliza la
+                            <a href="https://mercadomovil.com.mx/login/" style="text-decoration: none; color: #cb6c18">versión antigua de Mercado Móvil.</a></div>
+                    </div>
+                </div>
             <a ui-sref="docs" class="btn btn-white-clear">Más información</a>
             <a href="https://mercadomovil.com.mx/hq/access/register" class="btn btn-orange">Abrir una cuenta</a>
 
             <div class="download-app">
                 <a target="_blank" href="https://appsto.re/mx/QrI68.i"><img src="img/download-app.png" alt="App Store"/></a>
-                <a target="_blank" href="https://play.google.com/store/apps/details?id=com.desarrollapps.mercadomovil&hl=es"><img src="img/download-play.png" alt="Google play"/></a>
+                <a target="_blank"
+                   href="https://play.google.com/store/apps/details?id=com.desarrollapps.mercadomovil&hl=es"><img
+                        src="img/download-play.png" alt="Google play"/></a>
             </div>
         </div>
     </uib-carousel>
@@ -28,9 +37,11 @@
 <section class="more-info">
     <div class="container info-links">
         <div class="col-sm-2"><strong>Más información:</strong></div>
-        <div class="col-sm-3"><a ui-sref="category_doc({slug: 'preguntas-mas-frecuentes' })">Preguntas frecuentes</a></div>
+        <div class="col-sm-3"><a ui-sref="category_doc({slug: 'preguntas-mas-frecuentes' })">Preguntas frecuentes</a>
+        </div>
         <div class="col-sm-3"><a ui-sref="category_doc({slug: 'tutoriales' })">¿Como usar Mercado Móvil?</a></div>
-        <div class="col-sm-3"><a ui-sref="category_doc({slug: 'mas-de-mercado-movil'})">Más acerca de Mercado Móvil</a></div>
+        <div class="col-sm-3"><a ui-sref="category_doc({slug: 'mas-de-mercado-movil'})">Más acerca de Mercado Móvil</a>
+        </div>
     </div>
 </section>
 <section id="why-us" class="section_padding">
@@ -54,7 +65,8 @@
             <br/>
 
             <div class="text-center">
-                <a href="https://mercadomovil.com.mx/hq/access/register" class="btn btn-white-clear">Abrir cuenta en Mercado Móvil</a>
+                <a href="https://mercadomovil.com.mx/hq/access/register" class="btn btn-white-clear">Abrir cuenta en
+                    Mercado Móvil</a>
             </div>
         </div>
     </div>
@@ -74,8 +86,8 @@
             </div>
         </div>
         <h2 class="text-center no-content" ng-show="!Home.why.length">Lo sentimos no contamos con
-                            contenido
-                            disponible</h2>
+            contenido
+            disponible</h2>
     </div>
 </section>
 <section id="contact" class="section_padding">
@@ -83,6 +95,7 @@
         <h2>¿Necesitas ayuda o más información?</h2>
 
         <p>Contáctanos, estamos para servirte. </p>
+
         <div class="col-md-12 list-contact">
             <div class="col-sm-4">
                 <a href="tel:3318959338"><i class="fa fa-mobile"></i> (33) 18 95 93 38</a>
