--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -19,7 +19,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <div class="alert alert-warning alert-dismissible" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>Si procesas tus cobros con iOS, utiliza la
-                            <a href="https://mercadomovil.com.mx/login/" style="text-decoration: none; color: #cb6c18">versión antigua de Mercado Móvil.</a></div>
+                            <a href="https://mercadomovil.com.mx/login" style="text-decoration: none; color: #cb6c18">versión antigua de Mercado Móvil.</a></div>
                     </div>
                 </div>
             <a ui-sref="docs" class="btn btn-white-clear">Más información</a>
