--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -13,7 +13,7 @@
                         <div class="box-default">
                             <a ui-sref="doc_detail({slug: entry.slug})">
                                 <div class="box-header"
-                                     style="background-image: url('{{ entry.urlImages.medium ? entry.urlImages.medium : 'http://localhost:8080/img/img-default.jpg' }}"></div>
+                                     style="background-image: url('{{ entry.urlImages.medium ? entry.urlImages.medium : 'https://mercadomovil.com.mx/img/img-default.jpg' }}"></div>
 
                                 <div class="description">
                                     <div class="height-title"><h3><a ui-sref="doc_detail({slug: entry.slug})" title="{{ entry.title }}">{{ entry.title | characters:50 }} </a></h3></div>
