--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -19,11 +19,11 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <div class="alert alert-warning alert-dismissible" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>Si procesas tus cobros con iOS, utiliza la
-                            <a href="https://mercadomovil.com.mx/login/" style="text-decoration: none; color: #cb6c18">versión antigua de Mercado Móvil.</a></div>
+                            <a href="https://mercadomovil.com.mx/login/" target="_self" style="text-decoration: none; color: #cb6c18">versión antigua de Mercado Móvil.</a></div>
                     </div>
                 </div>
             <a ui-sref="docs" class="btn btn-white-clear">Más información</a>
-            <a href="https://mercadomovil.com.mx/hq/access/register" class="btn btn-orange">Abrir una cuenta</a>
+            <a href="https://mercadomovil.com.mx/hq/access/register" target="_self" class="btn btn-orange">Abrir una cuenta</a>
 
             <div class="download-app">
                 <a target="_blank" href="https://appsto.re/mx/QrI68.i"><img src="img/download-app.png" alt="App Store"/></a>
@@ -65,7 +65,7 @@
             <br/>
 
             <div class="text-center">
-                <a href="https://mercadomovil.com.mx/hq/access/register" class="btn btn-white-clear">Abrir cuenta en
+                <a href="https://mercadomovil.com.mx/hq/access/register" target="_self" class="btn btn-white-clear">Abrir cuenta en
                     Mercado Móvil</a>
             </div>
         </div>
