add dashboard links

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
             <a ui-sref="docs" class="btn btn-white-clear">Más información</a>
-            <a href="https://mercadomovil.com.mx/hq/access/register" target="_self" class="btn btn-orange">Abrir una cuenta</a>
+            <a href="//dashboard.mercadomovil.com.mx/hq/access/register" target="_self" class="btn btn-orange">Abrir una cuenta</a>
 
             <div class="download-app">
                 <a target="_blank" href="https://appsto.re/mx/QrI68.i"><img src="img/download-app.png" alt="App Store"/></a>
@@ -65,7 +65,7 @@
             <br/>
 
             <div class="text-center">
-                <a href="https://mercadomovil.com.mx/hq/access/register" target="_self" class="btn btn-white-clear">Abrir cuenta en
+                <a href="//dashboard.mercadomovil.com.mx/hq/access/register" target="_self" class="btn btn-white-clear">Abrir cuenta en
                     Mercado Móvil</a>
             </div>
         </div>
