--- a/app/css/main.css
+++ b/app/css/main.css
@@ -22,6 +22,9 @@
 .padding {
   padding: 20px 0;
 }
+.alert-warning {
+  text-shadow: 0 0 0 transparent;
+}
 a:focus {
   outline: 0 solid;
 }
@@ -114,6 +117,9 @@ body {
   .deckgrid[deckgrid]::before {
     content: '1 .column.size-1-1';
   }
+}
+.log-section-mobile {
+  display: none;
 }
 header {
   margin-top: 0px;
@@ -329,6 +335,10 @@ colorred
   width: 100%;
   left: 0;
 }
+.carousel-caption h2 {
+  border-bottom: 1px solid rgba(255,255,255,0.4);
+  padding-bottom: 20px;
+}
 .carousel-caption .download-app {
   padding: 20px 0;
 }
@@ -337,7 +347,6 @@ colorred
 }
 .carousel-caption .log-process {
   padding: 25px 10px;
-  border-top: 1px solid rgba(255,255,255,0.4);
 }
 .carousel-caption .log-process h4 {
   font-size: 24px;
@@ -974,6 +983,14 @@ color
 #footer_area .text {
   color: #e08f17;
 }
+.btn-login {
+  color: #fff;
+  padding-top: 20px;
+}
+.btn-login:hover,
+.btn-login:focus {
+  color: rgba(255,255,255,0.6);
+}
 .btn-sm {
   padding: 5px 10px !important;
 }
@@ -1475,6 +1492,39 @@ color
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .breadcrumb > li {
+    font-size: 12px;
+  }
+  #footer_area .first-foo {
+    border-bottom: 1px solid rgba(255,255,255,0.5);
+    padding: 25px 0 45px 0;
+  }
+  .contact-section {
+    margin-top: 45px;
+  }
+  .carousel-caption {
+    padding: 0 25px;
+  }
+  .carousel-caption h2 {
+    font-size: 24px;
+  }
+  .carousel-caption h4 {
+    font-size: 18px;
+  }
+  .slider-img {
+    height: 640px;
+  }
+  header .navbar-default .nav-log li > a {
+    padding: 15px 0;
+    border: none;
+  }
+  header .navbar-default .navbar-nav > li > a {
+    font-size: 16px;
+  }
+  header .logo {
+    width: 180px;
+    margin-top: 40px;
+  }
   .box-widget {
     border-left: 0 solid transparent;
     border-top: 1px solid #ccc;
@@ -1492,94 +1542,64 @@ color
   .work-description {
     margin-top: 50px;
   }
-  header .navbar-default .navbar-nav .dropdown .dropdown-menu {
-    background: #389c80;
-    box-shadow: none;
-    border-radius: 0;
-  }
-  header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a {
-    color: #fff;
-  }
-  .navbar-logo {
-    display: none;
-  }
-  .navbar-logo .logo-img {
-    display: none;
-  }
-  .navbar-header {
-    float: none;
-  }
-  .navbar-toggle {
-    display: block;
-    margin-top: 3%;
-  }
-  .navbar-collapse {
-    border-top: 1px solid transparent;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-  }
-  .navbar-collapse.collapse {
-    display: none !important;
-  }
-  .navbar-collapse.collapse.in {
-    display: block !important;
-    border-top: 0px solid #fff;
-    border-color: transparent;
-  }
-  .navbar-default .navbar-toggle:hover,
-  .navbar-default .navbar-toggle:focus {
-    background: transparent;
-  }
-  .navbar-default .navbar-toggle {
-    border-color: transparent;
-  }
-  .navbar-nav {
-    float: none !important;
-    margin: 7.5px -15px;
-  }
-  .navbar-nav>li {
-    float: none;
-  }
-  .navbar-nav>li>a {
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-  .navbar-toggle .icon-bar {
-    background: #fff;
-  }
-  .navbar-nav {
-    background: #fff;
-    margin-top: 30px;
-    box-shadow: 0 4px 5px rgba(0,0,0,0.3);
-    border-top: 1px solid #f5f5f5;
-  }
-  .carousel-inner > .item > img {
-    height: 620px;
-  }
-  .recent-work-wrap {
-    margin: 5px;
-  }
-  .carousel-caption {
-    top: 25%;
-  }
-  .recent-work-wrap > .titles {
-    padding: 35px 20px 10px;
-  }
-  #product-detail .title-detail .content-title .title {
-    text-align: center;
-  }
-  .recent-work-wrap .titles h3 {
-    font-size: 18px;
-  }
-  .box-sidebar .box-body .list-group a {
-    color: #777;
-    word-break: break-all;
-  }
-  #contact-section {
-    background-size: cover;
-    padding: 30px 0;
-  }
+}
+.carousel-inner > .item > img {
+  height: 620px;
+}
+.recent-work-wrap {
+  margin: 5px;
+}
+.carousel-caption {
+  top: 25%;
+}
+.recent-work-wrap > .titles {
+  padding: 35px 20px 10px;
+}
+#product-detail .title-detail .content-title .title {
+  text-align: center;
+}
+.recent-work-wrap .titles h3 {
+  font-size: 18px;
+}
+.box-sidebar .box-body .list-group a {
+  color: #777;
+  word-break: break-all;
+}
+#contact-section {
+  background-size: cover;
+  padding: 30px 0;
 }
 @media only screen and (max-width: 767px) {
+  .more-info .info-links a {
+    line-height: 35px;
+  }
+  .carousel {
+    margin-top: 50px;
+  }
+  .log-section-mobile {
+    display: inline;
+  }
+  .log-section-mobile .loging-mob {
+    background-color: #cb6c18;
+    padding: 20px 0;
+    border-top: 1px solid #db8a12;
+    text-align: center;
+  }
+  #footer_area .info {
+    text-align: center;
+  }
+  #footer_area .info a {
+    line-height: 55px;
+  }
+  .first-foo {
+    text-align: center !important;
+  }
+  .download-app a > img {
+    width: 40%;
+  }
+  .slider-img {
+    height: 760px;
+  }
   .navbar-header {
     background: #cb6c18;
     padding-bottom: 15px;
@@ -1588,6 +1608,7 @@ color
     margin-top: 30px;
     border-left: 1px solid transparent;
     text-indent: 5px;
+    display: none;
   }
   .nav-main {
     border: none !important;
@@ -1714,7 +1735,7 @@ color
   }
   .navbar-nav {
     background: transparent;
-    margin-top: 44px;
+    margin-top: 25px;
     box-shadow: 0 4px 5px rgba(0,0,0,0.3);
     border-top: 1px solid #f5f5f5;
   }
@@ -1725,8 +1746,8 @@ color
     display: none;
   }
   header .logo {
-    margin-top: 20px;
-    width: 250px;
+    margin-top: 25px;
+    width: 230px;
   }
   h2.title-outstanding {
     font-size: 16px !important;
@@ -1756,6 +1777,7 @@ color
   }
   .carousel-caption {
     top: 20%;
+    padding: 0 15px;
   }
   .carousel-caption .btn {
     margin-bottom: 20px;
