--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -65,6 +65,32 @@
 
 
 @media only screen and (min-width: 768px) and (max-width: 1024px)
+  .breadcrumb > li
+    font-size 12px
+  #footer_area .first-foo
+    border-bottom 1px solid rgba(255,255,255,0.5)
+    padding 25px 0 45px 0
+  .contact-section
+    margin-top 45px
+  .carousel-caption
+    padding 0 25px
+    h2
+      font-size 24px
+    h4
+      font-size 18px
+  .slider-img
+    height 640px
+  header .navbar-default .nav-log li > a
+    padding 15px 0
+    border none
+
+  header .navbar-default .navbar-nav > li > a
+    font-size 16px
+
+  header .logo
+    width 180px
+    margin-top 40px
+
   .box-widget
     border-left 0 solid transparent
     border-top 1px solid #ccc
@@ -78,63 +104,63 @@
   .work-description
     margin-top 50px
 
-  header .navbar-default .navbar-nav .dropdown .dropdown-menu
-    background #389c80
-    box-shadow none
-    border-radius 0
+  /*header .navbar-default .navbar-nav .dropdown .dropdown-menu*/
+    /*background #389c80*/
+    /*box-shadow none*/
+    /*border-radius 0*/
 
-  header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a
-    color white
+  /*header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a*/
+    /*color white*/
 
-  .navbar-logo
-    display none
-    .logo-img
-      display none
+  /*.navbar-logo*/
+    /*display none*/
+    /*.logo-img*/
+      /*display none*/
 
-  .navbar-header
-    float none
+  /*.navbar-header*/
+    /*float none*/
 
-  .navbar-toggle
-    display block
-    margin-top 3%
+  /*.navbar-toggle*/
+    /*display block*/
+    /*margin-top 3%*/
 
-  .navbar-collapse
-    border-top 1px solid transparent
-    box-shadow inset 0 1px 0 rgba(255,255,255,0.1)
+  /*.navbar-collapse*/
+    /*border-top 1px solid transparent*/
+    /*box-shadow inset 0 1px 0 rgba(255,255,255,0.1)*/
 
-  .navbar-collapse.collapse
-    display none !important
+  /*.navbar-collapse.collapse*/
+    /*display none !important*/
 
-  .navbar-collapse.collapse.in
-    display block !important
-    border-top 0px solid white
-    border-color transparent
+  /*.navbar-collapse.collapse.in*/
+    /*display block !important*/
+    /*border-top 0px solid white*/
+    /*border-color transparent*/
 
-  .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
-    background transparent
+  /*.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus*/
+    /*background transparent*/
 
-  .navbar-default .navbar-toggle
-    border-color transparent
+  /*.navbar-default .navbar-toggle*/
+    /*border-color transparent*/
 
-  .navbar-nav
-    float none!important
-    margin 7.5px -15px
+  /*.navbar-nav*/
+    /*float none!important*/
+    /*margin 7.5px -15px*/
 
-  .navbar-nav>li
-    float none
+  /*.navbar-nav>li*/
+    /*float none*/
 
-  .navbar-nav>li>a
-    padding-top 10px
-    padding-bottom 10px
+  /*.navbar-nav>li>a*/
+    /*padding-top 10px*/
+    /*padding-bottom 10px*/
 
-  .navbar-toggle .icon-bar
-    background white
+  /*.navbar-toggle .icon-bar*/
+    /*background white*/
 
-  .navbar-nav
-    background white
-    margin-top 30px
-    box-shadow 0 4px 5px rgba(0,0,0,0.3)
-    border-top 1px solid #f5f5f5
+  /*.navbar-nav*/
+    /*background white*/
+    /*margin-top 30px*/
+    /*box-shadow 0 4px 5px rgba(0,0,0,0.3)*/
+    /*border-top 1px solid #f5f5f5*/
 
   .carousel-inner > .item > img
     height 620px
@@ -166,6 +192,27 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .more-info .info-links a
+    line-height 35px
+  .carousel
+    margin-top 50px
+  .log-section-mobile
+    display inline
+    .loging-mob
+      background-color #cb6c18
+      padding 20px 0
+      border-top 1px solid #db8a12
+      text-align center
+  #footer_area .info
+    text-align center
+  #footer_area .info a
+    line-height 55px
+  .first-foo
+    text-align center !important
+  .download-app a > img
+    width 40%
+  .slider-img
+    height 760px
   .navbar-header
     background #cb6c18
     padding-bottom 15px
@@ -173,6 +220,7 @@
     margin-top 30px
     border-left 1px solid transparent;
     text-indent 5px
+    display none
   .nav-main
     border none !important
   .nav-log
@@ -260,7 +308,7 @@
     background rgba(0,0,0,0.89)
   .navbar-nav
     background transparent
-    margin-top 44px
+    margin-top 25px
     box-shadow 0 4px 5px rgba(0,0,0,0.3)
     border-top 1px solid #f5f5f5
   .fluid-res
@@ -268,8 +316,8 @@
   #wrap
     display none
   header .logo
-    margin-top 20px
-    width 250px
+    margin-top 25px
+    width 230px
   h2.title-outstanding
     font-size 16px !important
     padding 20px 10px !important
@@ -291,6 +339,7 @@
     padding-bottom 300px
   .carousel-caption
     top 20%
+    padding 0 15px
     .btn
       margin-bottom 20px
 
