--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -11,7 +11,7 @@
 <section id="content-area" class="content-blog">
     <div class="container">
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-md-9 col-sm-8">
                 <div class="col-md-12 title-post" style="text-align:left;">
                     <h2 class="title">{{ Post.detail.title }}</h2>
                 </div>
@@ -44,7 +44,7 @@
                     <article ng-bind-html="Post.detail.content | trustHtml"></article>
                 </div>
             </div>
-            <div class="col-md-3 widgets">
+            <div class="col-md-3 col-sm-4 widgets">
                 <ng-include src="'/templates/partials/sidebar.html'"></ng-include>
             </div>
         </div>
